--- a/www/index.html
+++ b/www/index.html
@@ -52,17 +52,16 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
-
-
     <script src="js/directives.js"></script>
-
     <script src="js/services.js"></script>
-
 
     <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
     -->
-
+    <!-- google maps javascript -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGT-8Du3SwJCfdC7aNFqPheR_WTEv_dX0"></script>
+    <!--<script src="js/google.js"></script>-->
+    <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>-->
   </head>
   <body ng-app="app" animation="slide-left-right">
   <div>
