start deal with database via api

--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,7 @@
     -->
     <!-- google maps javascript -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGT-8Du3SwJCfdC7aNFqPheR_WTEv_dX0"></script>
+    <script src="../plugins/cordova-plugin-locationservices/www/LocationServices.js"></script>
     <!--<script src="js/google.js"></script>-->
     <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>-->
   </head>
