--- a/www/index.html
+++ b/www/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <!--<meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">-->
+
     <title></title>
-
-
-
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
 
@@ -50,19 +47,18 @@
     </style>
 
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
+    <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
     -->
-    <!-- google maps javascript -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGT-8Du3SwJCfdC7aNFqPheR_WTEv_dX0"></script>
-    <script src="../plugins/cordova-plugin-locationservices/www/LocationServices.js"></script>
-    <!--<script src="js/google.js"></script>-->
-    <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>-->
+
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGT-8Du3SwJCfdC7aNFqPheR_WTEv_dX0&v=3"></script>
+
   </head>
   <body ng-app="app" animation="slide-left-right">
   <div>
