login and register are completed..

--- a/www/index.html
+++ b/www/index.html
@@ -48,9 +48,22 @@
 
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
-    <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
+
+    <script src="js/controllers/aboutUsController.js"></script>
+    <script src="js/controllers/homeController.js"></script>
+    <script src="js/controllers/loginController.js"></script>
+    <script src="js/controllers/menuController.js"></script>
+    <script src="js/controllers/myTripsController.js"></script>
+    <script src="js/controllers/paymentController.js"></script>
+    <script src="js/controllers/profileController.js"></script>
+    <script src="js/controllers/promotionController.js"></script>
+    <script src="js/controllers/signupController.js"></script>
+    <script src="js/controllers/supportController.js"></script>
+    <script src="js/controllers/telNumberController.js"></script>
+    <script src="js/controllers/welcomePage1Controller.js"></script>
+    <script src="js/controllers/welcomePage2Controller.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
