google map handling via factories first step is completed, litle bit different from existing implementation

--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,7 @@
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
 
+    <!--controllers-->
     <script src="js/controllers/aboutUsController.js"></script>
     <script src="js/controllers/homeController.js"></script>
     <script src="js/controllers/loginController.js"></script>
@@ -64,6 +65,10 @@
     <script src="js/controllers/telNumberController.js"></script>
     <script src="js/controllers/welcomePage1Controller.js"></script>
     <script src="js/controllers/welcomePage2Controller.js"></script>
+
+    <!--factories-->
+    <script src="js/factories/markers.js"></script>
+    <script src="js/factories/googleMap.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
